[tool.poetry]
name = "first-app"
version = "0.1.0"
description = ""
authors = ["AhmadSailik <asailik1993@gmail.com>"]
readme = "README.md"
packages = [{include = "first_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
pytest = {version = "^7.2.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
